# Artifact-Registry-and-Cloud-Build

./: .gitignore  Dockerfile  README.md  cloudbuild-docker.yaml  cloudbuild-python.yaml  requirements.txt  setup.cfg
src/div_mod.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
