[metadata]
name = div_mod
version = 0.1.0
author = Lynn Kwong
author_email = kwonglynn@test.com
description = A function to calculate quotient and remainder.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find:
package_dir =
    = src
scripts = 
    src/div_mod_pkg/div_mod_script.py

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    div-mod-example = div_mod_pkg:div_mod_example
